qrcodeページ追加

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
           <div class="riding_date">
             <div class="date-picker">
               <span id="dateText"></span>
-              <span class="chevron" aria-hidden="true"></span>
+              <span class="chevron" aria-hidden="true"
+                ><img src="img/up.svg" alt=""
+              /></span>
               <input id="dateInput" type="date" lang="ja" />
             </div>
           </div>
